# AI-Agent-Mortgage-Analytics

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements-minimal.txt  requirements.txt  run.py  start.ps1
app/: __init__.py  agent.py  config.py  main.py  retrieval.py  sql_guardrails.py
docs/: API.md
frontend/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo
frontend/src/: App.css  App.tsx  index.css  types.ts
frontend/src/components/: DisambiguationPicker.css  DisambiguationPicker.tsx  QueryInterface.css  QueryInterface.tsx  ResultsTable.css  ResultsTable.tsx
scripts/: ingest_data.py  init_db.py  run_all.ps1
